--- a/styles.css
+++ b/styles.css
@@ -1,149 +1,188 @@
-body {
-    background-color: lightsalmon;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-}
-
-h2 {
-    color: darkred;
-    font-size: x-large;
-    line-height: 25px;
-}
-
-h3 {
-    font-weight: 600;
-    font-size: x-small;
-    line-height: 2em;
-}
-
-header {
-    background-color: tomato;
-    height: 20px;
-    padding: 10px;
-    margin-bottom: 1.6em;
-}
-
-header p {
-    padding-right: 50px;
-    color: white;
-    font-weight: 500;
-}
-
-.flex-pond {
-    display: flex;
-    justify-content: space-evenly;
-    align-content: stretch;
-    flex-flow: row wrap;
-}
-
-.flex-pond p {
-    margin: 10px 0px;
-}
-
-.card {
-    background-color: wheat;
-    border-radius: 25px;
-    padding: 20px;
-    width: 250px;
-    height: 380px;
-    margin: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-}
-
-.card-container {
-    padding: 10px;
-}
-
-.card-container p,
-li {
-    line-height: 1.6em;
-}
-
-
-/* .card:hover,
+  body {
+      background: #f4f4f4;
+      background-size: 100% 100%;
+      font-family: 'Zilla Slab', serif;
+      font-size: 16px;
+  }
+  
+  p {
+      color: #6a4162;
+  }
+  
+  h1 {
+      font-family: 'Zilla Slab', serif;
+      font-size: 2.5em;
+      font-weight: 300;
+      color: #d46a92;
+      line-height: 1em;
+      text-align: center;
+      margin-top: 50px;
+  }
+  
+  h2 {
+      color: #d46a92;
+      font-size: x-large;
+      line-height: 25px;
+      font-family: 'Zilla Slab', serif;
+  }
+  
+  h3 {
+      color: black;
+      font-weight: 600;
+      letter-spacing: 2px;
+      font-size: x-small;
+      line-height: 2em;
+  }
+  
+  img {
+      image-rendering: crisp-edges;
+  }
+  
+  header {
+      padding: 10px;
+      margin-bottom: 1.6em;
+  }
+  
+  .flex-pond {
+      display: flex;
+      justify-content: space-evenly;
+      align-content: stretch;
+      flex-flow: row wrap;
+  }
+  
+  .flex-pond p {
+      margin: 10px 0px;
+  }
+  
+  .card {
+      color: #6a4162;
+      background-color: #fefafa;
+      border: 5px solid #f39db6;
+      border-width: 0px 0px 5px 0px;
+      border-radius: 25px;
+      padding: 20px;
+      width: 250px;
+      height: 380px;
+      margin: 10px;
+      box-shadow: 0 4px 8px 0 rgba(106, 68, 98, 0.2);
+      transition: 0.3s;
+  }
+  
+  .card-container {
+      padding: 10px;
+  }
+  
+  .card-container p,
+  li {
+      line-height: 1.6em;
+  }
+  /* .card:hover,
 .card:focus {
     box-shadow: 0 8px 16px 0 rgba(0, 1, 0, 0.3);
     transform: translateY(-0.25em);
 } */
-
-.btn {
-    color: white;
-    background-color: orange;
-    background-repeat: no-repeat;
-    display: inline-block;
-    text-decoration: none;
-    padding: 1em 2em;
-    margin: 10px 0px;
-    border-radius: 25px;
-}
-
-.btn:hover,
-.btn:focus {
-    background-color: darkred;
-    background-repeat: no-repeat;
-}
-
-
-/* ---------------- This is a verified experiment ------------------*/
-
-
-/* entire container, keeps perspective */
-
-.flip-container {
-    perspective: 1000px;
-}
-
-
-/* flip the pane when hovered */
-
-.flip-container:hover .flipper,
-.flip-container.hover .flipper {
-    transform: rotateY(180deg);
-}
-
-.flip-container,
-.front,
-.back {
-    width: 320px;
-    height: 480px;
-}
-
-
-/* flip speed goes here */
-
-.flipper {
-    transition: 0.6s;
-    transform-style: preserve-3d;
-    position: relative;
-}
-
-
-/* hide back of pane during swap */
-
-.front,
-.back {
-    backface-visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-
-/* front pane, placed above back */
-
-.front {
-    z-index: 2;
-    /* for firefox 31 */
-    transform: rotateY(0deg);
-}
-
-
-/* back, initially hidden pane */
-
-.back {
-    transform: rotateY(180deg);
-}
-
-
-/* ---------------- This is an experiment ------------------*/
+  
+  .btn {
+      color: #fefafa;
+      background-color: #f39db6;
+      background-repeat: no-repeat;
+      display: inline-block;
+      text-decoration: none;
+      padding: 1em 2em;
+      margin: 10px 0px;
+      border-radius: 25px;
+  }
+  
+  .btn:hover,
+  .btn:focus {
+      background-color: #d46a92;
+      background-repeat: no-repeat;
+  }
+  
+  .tools {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 3;
+  }
+  
+  .tools .btn {
+      border: none;
+      background-color: #6a4162;
+      padding: 1em 1em;
+  }
+  
+  .tools .btn:hover,
+  .tools .btn:focus {
+      background-color: #d46a92;
+      background-repeat: no-repeat;
+  }
+  /* ---------------- This is a verified experiment ------------------*/
+  /* entire container, keeps perspective */
+  
+  .flip-container {
+      perspective: 1000px;
+  }
+  /* flip the pane when hovered */
+  
+  .flip-container:hover .flipper,
+  .flip-container.hover .flipper {
+      transform: rotateY(180deg);
+  }
+  
+  .flip-container,
+  .front,
+  .back {
+      width: 320px;
+      height: 480px;
+  }
+  /* flip speed goes here */
+  
+  .flipper {
+      transition: 0.6s;
+      transform-style: preserve-3d;
+      position: relative;
+  }
+  /* hide back of pane during swap */
+  
+  .front,
+  .back {
+      backface-visibility: hidden;
+      -webkit-backface-visibility: hidden;
+      /* Safari */
+      position: absolute;
+      top: 0;
+      left: 0;
+  }
+  /* front pane, placed above back */
+  
+  .front {
+      z-index: 2;
+      /* for firefox 31 */
+      transform: rotateY(0deg);
+  }
+  
+  .front p {
+      color: #8498af;
+      line-height: 1em;
+  }
+  /* back, initially hidden pane */
+  
+  .back {
+      transform: rotateY(180deg);
+  }
+  /* ---------------- This is a verified experiment ------------------*/
+  
+  .parallax {
+      /* The image used */
+      background: rgb(254, 250, 250);
+      background: linear-gradient(180deg, rgba(254, 250, 250, 1) 0%, rgba(246, 210, 214, 1) 100%);
+      /* Full height */
+      height: 100%;
+      /* Create the parallax scrolling effect */
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+  }
+  /* ---------------- This is an experiment ------------------*/
