--- a/styles.css
+++ b/styles.css
@@ -1,188 +1,317 @@
-  body {
-      background: #f4f4f4;
-      background-size: 100% 100%;
-      font-family: 'Zilla Slab', serif;
-      font-size: 16px;
-  }
-  
-  p {
-      color: #6a4162;
-  }
-  
-  h1 {
-      font-family: 'Zilla Slab', serif;
-      font-size: 2.5em;
-      font-weight: 300;
-      color: #d46a92;
-      line-height: 1em;
-      text-align: center;
-      margin-top: 50px;
-  }
-  
-  h2 {
-      color: #d46a92;
-      font-size: x-large;
-      line-height: 25px;
-      font-family: 'Zilla Slab', serif;
-  }
-  
-  h3 {
-      color: black;
-      font-weight: 600;
-      letter-spacing: 2px;
-      font-size: x-small;
-      line-height: 2em;
-  }
-  
-  img {
-      image-rendering: crisp-edges;
-  }
-  
-  header {
-      padding: 10px;
-      margin-bottom: 1.6em;
-  }
-  
-  .flex-pond {
-      display: flex;
-      justify-content: space-evenly;
-      align-content: stretch;
-      flex-flow: row wrap;
-  }
-  
-  .flex-pond p {
-      margin: 10px 0px;
-  }
-  
-  .card {
-      color: #6a4162;
-      background-color: #fefafa;
-      border: 5px solid #f39db6;
-      border-width: 0px 0px 5px 0px;
-      border-radius: 25px;
-      padding: 20px;
-      width: 250px;
-      height: 380px;
-      margin: 10px;
-      box-shadow: 0 4px 8px 0 rgba(106, 68, 98, 0.2);
-      transition: 0.3s;
-  }
-  
-  .card-container {
-      padding: 10px;
-  }
-  
-  .card-container p,
-  li {
-      line-height: 1.6em;
-  }
-  /* .card:hover,
+body {
+    background: #f4f4f4;
+    background-size: 100% 100%;
+    font-family: 'Zilla Slab', serif;
+    font-size: 16px;
+    width: 100%;
+}
+
+a {
+    text-decoration: none;
+}
+
+p {
+    color: #6a4162;
+}
+
+h1 {
+    font-family: 'Zilla Slab', serif;
+    font-size: 2.5em;
+    font-weight: 300;
+    color: #d46a92;
+    line-height: 1em;
+    text-align: center;
+    margin-top: 50px;
+}
+
+h2 {
+    color: #d46a92;
+    font-size: x-large;
+    line-height: 25px;
+    font-family: 'Zilla Slab', serif;
+}
+
+h3 {
+    color: black;
+    font-weight: 600;
+    letter-spacing: 2px;
+    font-size: x-small;
+    line-height: 2em;
+}
+
+header {
+    padding: 10px;
+    margin-bottom: 1.6em;
+}
+
+ul {
+    list-style-type: square;
+    padding-left: 13px;
+}
+
+.flex-pond {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: stretch;
+    flex-flow: row wrap;
+    width: 90%;
+    margin: auto;
+}
+
+.flex-pond p {
+    margin: 10px 0px;
+}
+
+.card {
+    color: #6a4162;
+    background-color: #fefafa;
+    border: 5px solid #f39db6;
+    border-width: 0px 0px 5px 0px;
+    border-radius: 25px;
+    padding: 20px;
+    width: 250px;
+    height: 380px;
+    margin: 10px;
+    box-shadow: 0 4px 8px 0 rgba(106, 68, 98, 0.2);
+    transition: 0.3s;
+}
+
+.card-container {
+    padding: 10px;
+}
+
+.card-container p,
+li {
+    line-height: 1.6em;
+}
+
+
+/* .card:hover,
 .card:focus {
-    box-shadow: 0 8px 16px 0 rgba(0, 1, 0, 0.3);
-    transform: translateY(-0.25em);
+box-shadow: 0 8px 16px 0 rgba(0, 1, 0, 0.3);
+transform: translateY(-0.25em);
 } */
-  
-  .btn {
-      color: #fefafa;
-      background-color: #f39db6;
-      background-repeat: no-repeat;
-      display: inline-block;
-      text-decoration: none;
-      padding: 1em 2em;
-      margin: 10px 0px;
-      border-radius: 25px;
-  }
-  
-  .btn:hover,
-  .btn:focus {
-      background-color: #d46a92;
-      background-repeat: no-repeat;
-  }
-  
-  .tools {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 3;
-  }
-  
-  .tools .btn {
-      border: none;
-      background-color: #6a4162;
-      padding: 1em 1em;
-  }
-  
-  .tools .btn:hover,
-  .tools .btn:focus {
-      background-color: #d46a92;
-      background-repeat: no-repeat;
-  }
-  /* ---------------- This is a verified experiment ------------------*/
-  /* entire container, keeps perspective */
-  
-  .flip-container {
-      perspective: 1000px;
-  }
-  /* flip the pane when hovered */
-  
-  .flip-container:hover .flipper,
-  .flip-container.hover .flipper {
-      transform: rotateY(180deg);
-  }
-  
-  .flip-container,
-  .front,
-  .back {
-      width: 320px;
-      height: 480px;
-  }
-  /* flip speed goes here */
-  
-  .flipper {
-      transition: 0.6s;
-      transform-style: preserve-3d;
-      position: relative;
-  }
-  /* hide back of pane during swap */
-  
-  .front,
-  .back {
-      backface-visibility: hidden;
-      -webkit-backface-visibility: hidden;
-      /* Safari */
-      position: absolute;
-      top: 0;
-      left: 0;
-  }
-  /* front pane, placed above back */
-  
-  .front {
-      z-index: 2;
-      /* for firefox 31 */
-      transform: rotateY(0deg);
-  }
-  
-  .front p {
-      color: #8498af;
-      line-height: 1em;
-  }
-  /* back, initially hidden pane */
-  
-  .back {
-      transform: rotateY(180deg);
-  }
-  /* ---------------- This is a verified experiment ------------------*/
-  
-  .parallax {
-      /* The image used */
-      background: rgb(254, 250, 250);
-      background: linear-gradient(180deg, rgba(254, 250, 250, 1) 0%, rgba(246, 210, 214, 1) 100%);
-      /* Full height */
-      height: 100%;
-      /* Create the parallax scrolling effect */
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-  }
-  /* ---------------- This is an experiment ------------------*/
+
+.btn {
+    color: #fefafa;
+    background-color: #f39db6;
+    background-repeat: no-repeat;
+    display: inline-block;
+    text-decoration: none;
+    padding: 1em 2em;
+    margin: 10px 0px;
+    border-radius: 25px;
+    border: none;
+    font-family: 'Zilla Slab', serif;
+    font-size: 16px;
+}
+
+.btn:hover,
+.btn:focus {
+    background-color: #d46a92;
+    background-repeat: no-repeat;
+}
+
+#reset {
+    background-color: rgba(0, 0, 0, 0);
+    color: #d46a92;
+}
+
+#reset:hover,
+#reset:focus {
+    background-color: rgba(254, 250, 250, 0.8);
+}
+
+.tools {
+    position: fixed;
+    bottom: 20px;
+    right: 10px;
+    z-index: 3;
+}
+
+#InvBtn {
+    bottom: 0px;
+    right: 10px;
+}
+
+#SLBtn {
+    bottom: 50px;
+    right: 30px;
+    margin-left: 10px;
+}
+
+.tools .btn {
+    background-color: #6a4162;
+    padding: 1em 1em;
+    border-radius: 50%;
+    border: none;
+}
+
+.tools .btn:hover,
+.tools .btn:focus {
+    background-color: #d46a92;
+    background-repeat: no-repeat;
+}
+
+
+/* ---------------- This is a verified experiment ------------------*/
+
+
+/* entire container, keeps perspective */
+
+.flip-container {
+    perspective: 1000px;
+}
+
+
+/* flip the pane when hovered */
+
+.flip-container:hover .flipper,
+.flip-container.hover .flipper {
+    transform: rotateY(180deg);
+}
+
+.flip-container,
+.front,
+.back {
+    width: 320px;
+    height: 480px;
+}
+
+
+/* flip speed goes here */
+
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+
+/* hide back of pane during swap */
+
+.front,
+.back {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
+/* front pane, placed above back */
+
+.front {
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
+}
+
+.front p {
+    color: #8498af;
+    line-height: 1em;
+}
+
+
+/* back, initially hidden pane */
+
+.back {
+    transform: rotateY(180deg);
+}
+
+
+/* ---------------- This is a verified experiment ------------------*/
+
+.parallax {
+    /* The image used */
+    background: rgb(254, 250, 250);
+    background: linear-gradient(180deg, rgba(254, 250, 250, 1) 0%, rgba(246, 210, 214, 1) 100%);
+    /* Full height */
+    height: 100%;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+/* ---------------- This is a verified experiment ------------------*/
+
+.tooltip {
+    background: #333;
+    color: white;
+    font-weight: bold;
+    padding: 4px 8px;
+    font-size: 13px;
+    border-radius: 4px;
+    display: none;
+}
+
+.tooltip[data-show] {
+    display: block;
+}
+
+.arrow,
+.arrow::before {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    z-index: -1;
+}
+
+.arrow::before {
+    content: '';
+    transform: rotate(45deg);
+    background: #333;
+}
+
+.tooltip[data-popper-placement^='top']>.arrow {
+    bottom: -4px;
+}
+
+.tooltip[data-popper-placement^='bottom']>.arrow {
+    top: -4px;
+}
+
+.tooltip[data-popper-placement^='left']>.arrow {
+    right: -4px;
+}
+
+.tooltip[data-popper-placement^='right']>.arrow {
+    left: -4px;
+}
+
+
+/* ---------------- This is an experiment ------------------*/
+
+.InvContainer {
+    display: inherit;
+    margin: 10px;
+    border-radius: 5px;
+}
+
+.InvContainer:hover {
+    background-color: rgba(212, 106, 146, 0.4);
+}
+
+.InvSelectBox {
+    padding: 10px;
+}
+
+input[type="checkbox"] {
+    position: absolute;
+    display: none;
+}
+
+.InvContainer input:checked {
+    height: 50px;
+    width: 50px;
+}
+
+.InvContainer input:checked+label {
+    background-color: white;
+    border-radius: 5px;
+}
