--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,7 @@ transform: translateY(-0.25em);
 }
 
 
-/* ---------------- This is an experiment ------------------*/
+/* ---------------- This is a verified experiment ------------------*/
 
 .InvContainer {
     display: inherit;
@@ -314,4 +314,46 @@ input[type="checkbox"] {
 .InvContainer input:checked+label {
     background-color: white;
     border-radius: 5px;
+}
+
+
+/* ---------------- This is an experiment ------------------*/
+
+@media only screen and (min-width: 320px) {
+    /* Small screen, non-retina */
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px),
+only screen and ( min--moz-device-pixel-ratio: 2) and (min-width: 320px),
+only screen and ( -o-min-device-pixel-ratio: 2/1) and (min-width: 320px),
+only screen and ( min-device-pixel-ratio: 2) and (min-width: 320px),
+only screen and ( min-resolution: 192dpi) and (min-width: 320px),
+only screen and ( min-resolution: 2dppx) and (min-width: 320px) {
+    /* Small screen, retina, stuff to override above media query */
+}
+
+@media only screen and (min-width: 700px) {
+    /* Medium screen, non-retina */
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 700px),
+only screen and ( min--moz-device-pixel-ratio: 2) and (min-width: 700px),
+only screen and ( -o-min-device-pixel-ratio: 2/1) and (min-width: 700px),
+only screen and ( min-device-pixel-ratio: 2) and (min-width: 700px),
+only screen and ( min-resolution: 192dpi) and (min-width: 700px),
+only screen and ( min-resolution: 2dppx) and (min-width: 700px) {
+    /* Medium screen, retina, stuff to override above media query */
+}
+
+@media only screen and (min-width: 1300px) {
+    /* Large screen, non-retina */
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1300px),
+only screen and ( min--moz-device-pixel-ratio: 2) and (min-width: 1300px),
+only screen and ( -o-min-device-pixel-ratio: 2/1) and (min-width: 1300px),
+only screen and ( min-device-pixel-ratio: 2) and (min-width: 1300px),
+only screen and ( min-resolution: 192dpi) and (min-width: 1300px),
+only screen and ( min-resolution: 2dppx) and (min-width: 1300px) {
+    /* Large screen, retina, stuff to override above media query */
 }
